Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI708NET.CS

            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_RcvBuild@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_RcvBuild(UInt32 configval, Int32 logfreq, Int32 framecount, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_XmtBuild@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_XmtBuild(UInt32 configval, UInt16 framefreq, Int32 logfreq, Int32 framecount, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_ChConfigEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChConfigEx(UInt32 configval, UInt16 count, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_ChDataCountRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_ChDataCountRd(Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_ChDataCountWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_ChDataCountWr(UInt16 countval, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_DllUsageCount@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_DllUsageCount();
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_GetChanCount@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI708_GetChanCount(ref Int32 rcvcount, ref Int32 xmtcount, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_HostComm@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_HostComm(IntPtr lpparam, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_IsChan@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_IsChan(Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_IsRcvChan@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_IsRcvChan(Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_IsXmtChan@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_IsXmtChan(Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgActivityRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_MsgActivityRd(Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgActivityWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI708_MsgActivityWr(UInt16 value, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgAddr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI708_MsgAddr(Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgCommRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgCommRd(ref MSGFIELDS708 msgfields, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgCommWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgCommWr(ref MSGFIELDS708 msgfields, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgConfig(UInt32 configval, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgCreate@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI708_MsgCreate(UInt32 configval, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgOptRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_MsgOptRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgOptWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI708_MsgOptWr(UInt16 msgopt, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgReset@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI708_MsgReset(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgTableCreate@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI708_MsgTableCreate(Int32 count, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgTableRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI708_MsgTableRd(Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgTableReset@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI708_MsgTableReset(Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgTableWipe@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI708_MsgTableWipe(UInt32 basevaladdr, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgTableWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgTableWr(UInt32 msgaddr, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_ParamAmplitudeGet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ParamAmplitudeGet(ref UInt16 dacval, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_TestProtocol@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_TestProtocol(IntPtr handleval);
        }
